done adding button

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>My First ever website</h1>
    <p>Feeling Happy Now</p>
    <p>I am a ghost</p>
-</body>
-</html>
+   <input type="text">
+   <br>
+   <button>click me baby!!!</button>
