--- a/index.html
+++ b/index.html
@@ -9,6 +9,4 @@
     <h1>My First ever website</h1>
    <p>Feeling Happy Now</p>
    <p>I am a ghost</p>
-   <input type="text">
-   <br>
-   <button>click me baby!!!</button>
+    <p>i am a nill pori lal jin</p>
