--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <p>I am a ghost</p>
     <p>i am a nill pori lal jin</p>
     <button>In The github website</button>
+    <button>In the github button</button>
  </body>
 </html>
     
