--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>My First ever website</h1>
-   <p>Feeling Happy Now</p>
-   <p>I am a ghost</p>
-    <p>i am a nill pori lal jin</p>
-    <button>In the VS Code</button>
-    <button>In The Github</button>
+    <p>Feeling Happy Now</p>
+    <p>I am a lover girl...</p>
+    <input type="text">
+    <br>
+    <button>click me baby</button>
  </body>
 </html>
     
